@@ -5990,7 +5990,7 @@
                 <para>
                     <itemizedlist>
                         <listitem>
-                            <para>...</para>
+                            <para>Revamped file properties dialog</para>
                         </listitem>
                         <listitem>
                             <para>New or updated docs: de, es</para>
