@@ -6,6 +6,7 @@ Bug fixes:
  * Fixed problem #... (...)
 
 New features:
+ * Revamped file properties dialog
  * New or updated docs: de, es
  * New or updated translations: da, es, eu, ru, sl, zh_CN
  * New key bindings:
